# FileWiz

./: LICENSE  README.md  pyproject.toml  test_filewizard.py
src/filewiz/: core.py  utils.py
src/filewiz.egg-info/: PKG-INFO  SOURCES.txt
src/filewizard/: __init__.py  compress.py  utils.py
